flux/apps/homepage/certificate.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: homepage-listenerset-to-homepage-tls
  namespace: envoy-gateway-system
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      namespace: default
  to:
    - group: ""
      kind: Secret
      name: homepage-tls
